Resolves size and position on mobile

--- a/_assets/stylesheets/components/_jumbotron.scss
+++ b/_assets/stylesheets/components/_jumbotron.scss
@@ -173,6 +173,13 @@
     font-size: 4.5rem;
     margin: 0 auto;
     text-align: left;
+
+    @media (max-width: 768px) {
+      position: relative; 
+      right: 8rem; 
+      font-size: 1rem;
+      top: -1.25rem;
+    }
   }
 
   .spinny-wrapper {
@@ -204,6 +211,12 @@
   position: absolute; 
   top: -30px; 
   width: 1500px; 
+
+  @media (max-width: 768px) {
+    font-size: 2.75rem;
+    position: absolute;
+    left: -8.5rem;
+  }
 }
 
 .word-carousel span:nth-child(2) { 
